--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<header class="container">
 			<h1>Tool Lending</h1>
 			<ul class="nav">
-				<li><strong>LENDING IS LOVELY</strong></li>
-				<li>AN OPEN SOURCE, EASY TO DUPLICATE PROJECT</li>
+				<li><strong>Climate Field Quotes</strong></li>
+				<li>HOW COASTAL GEORGIANS RESPOND TO THE ISSUE OF SEA-LEVEL RISE</li>
 				<li><a href="#info">HERE'S HOW</a></li>
 			</ul>
 		</header>
@@ -27,7 +27,7 @@
 		<div id="tools" class="container"><span class="flash animated">LOADING...</span></div>
 		<div id="info" class="container">
 				<div class="span1">
-					<h4>CONTRIBUTE TO THIS LIBRARY</h4>
+					<h4>CONTRIBUTE TO THIS COLLECTION</h4>
 					<p>If you've been invited by the person who initiated this near you, you'll have access and the ability to edit the rows of the spreadsheet feeding data to this site.</p>
 					<p>Simply add the rows for the tools you have and add yes if an item is currently being borrowed. Easy, the Spreadsheet auto-saves, too!</p>
 
@@ -35,19 +35,6 @@
 
 				</div>
 
-				<div class="span1">
-					<h4>START YOUR OWN</h4>
-					<p>The site is open source (free for all), uses a Google Spreadsheet for the data and is designed to be duplicated and live in minutes (Fork-n-go!). You can set up your own by following the instructions attached to the  <a href="http://www.github.com/jlord/lending-library" target="_blank">project's code</a> on GitHub. GitHub also hosts these pages for free with <a href="http://pages.github.com" target="_blank">GitHub Pages</a>.
-
-					<p>
-						<a class="imglink" href="http://jlord.github.io/forkngo" target="_blank">
-							<img src="https://raw.githubusercontent.com/jlord/forkngo/gh-pages/badges/charcoal.png" width="200">
-						</a>
-					</p>
-
-					<p>Built by <a href="http://www.twitter.com/jllord">@jllord</a>.
-
-				</div>
 		</div>
 
 		<script id="tools" type="text/html">
@@ -73,7 +60,7 @@
 
 		<script type="text/javascript">
 		  document.addEventListener('DOMContentLoaded', function() {
-	      var URL = "0AvFUWxii39gXdGxhcjhzYzlBX2pyVFZZU2VjZ3BHZ3c"
+	      var URL = "13Hwf4RePUeiayXlfngCe7fBh6Al9nLffMHN7NVLZdh0"
 	      Tabletop.init( { key: URL, callback: initialize, simpleSheet: true } )
 	    })
 		</script>
