--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<header class="container">
-			<h1>Tool Lending</h1>
+			<h1>Climate Change Quotes</h1>
 			<ul class="nav">
 				<li><strong>Climate Field Quotes</strong></li>
 				<li>HOW COASTAL GEORGIANS RESPOND TO THE ISSUE OF SEA-LEVEL RISE</li>
@@ -27,7 +27,7 @@
 		<div id="tools" class="container"><span class="flash animated">LOADING...</span></div>
 		<div id="info" class="container">
 				<div class="span1">
-					<h4>CONTRIBUTE TO THIS COLLECTION</h4>
+					<h4>CONTRIBUTE TO THIS SET OF WUESTIONS</h4>
 					<p>If you've been invited by the person who initiated this near you, you'll have access and the ability to edit the rows of the spreadsheet feeding data to this site.</p>
 					<p>Simply add the rows for the tools you have and add yes if an item is currently being borrowed. Easy, the Spreadsheet auto-saves, too!</p>
 
